--- a/package.json
+++ b/package.json
@@ -7,11 +7,28 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "prettier": "prettier 'src/**/*.js'"
   },
   "dependencies": {
+    "@baronha/react-native-photo-editor": "^1.1.6",
+    "@react-native-async-storage/async-storage": "^1.22.3",
+    "@react-native-masked-view/masked-view": "^0.3.1",
+    "@react-navigation/drawer": "^6.6.14",
+    "@react-navigation/native": "^6.1.15",
+    "@react-navigation/native-stack": "^6.9.25",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.15.0",
+    "react-native-image-picker": "^7.1.1",
+    "react-native-images-to-pdf": "^0.2.1",
+    "react-native-paper": "^5.12.3",
+    "react-native-pdf": "^6.7.4",
+    "react-native-reanimated": "^3.8.0",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -26,7 +43,7 @@
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
-    "prettier": "2.8.8",
+    "prettier": "^2.8.8",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
   },
