--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -74,9 +74,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.imageconverter"
+    namespace "com.image.converter.king.imagetopdf"
     defaultConfig {
-        applicationId "com.imageconverter"
+        applicationId "com.image.converter.king.imagetopdf"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 2
