--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "imageConverter",
-  "version": "0.0.1",
+  "name": "imageconverter",
+  "version": "0.0.2",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
